[gd_scene load_steps=4 format=2]

[ext_resource path="res://script/char_test.gd" type="Script" id=1]
[ext_resource path="res://enities/players/hp_bar.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 120 )

[node name="char" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 0 )
shape = SubResource( 1 )

[node name="CheckDashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="hp_bar_node2d" parent="." instance=ExtResource( 2 )]
position = Vector2( -64, -160 )
scale = Vector2( 0.132949, 0.366551 )
hp = 2

[connection signal="timeout" from="CheckDashTimer" to="." method="_on_CheckDashTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
